Fix spacing in resource category button

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -11,3 +11,17 @@
     font-family: 'Courier New', Courier, monospace;
     background-color: rgb(52,235,219);
  } 
+
+ h1{
+   height: 50px;
+   margin: 20px;
+   padding: 0px;
+ }
+
+ .add-category{
+   padding-right:20px;
+   width:200px
+ }
+ 
+
+
